feat: almost finish main pages

--- a/src/nullstyle.scss
+++ b/src/nullstyle.scss
@@ -44,6 +44,7 @@ body {
     position: relative;
     width: 100%;
     color: #000;
+    background-color: #FDFDFD;
 }
 
 html,
@@ -80,12 +81,10 @@ button::-moz-focus-inner {
 
 a,
 a:visited {
-    color: #000;
     text-decoration: none;
 }
 
 a:hover {
-    color: #000;
     text-decoration: none;
 }
 
